# vita-linux-loader

./: CMakeLists.txt  Makefile  README.md  debugScreen.h  linux_bootstrap.ld  linux_bootstrap.s  linuxloader.yml  log.h  main.c  payload.s  resume.s  trampoline.s
payload/: payload.ld  start.s  start_memcpy.s
sce_sys/livearea/contents/: template.xml
